# TGP

./: .gitignore  CMakeLists.txt
containers/: CMakeLists.txt  tgp_dynamic_allocation.h  tgp_vector.h  tgp_vector.tpp  tgp_vector_bool.h  tgp_vector_bool.tpp
containers/vector/: tgp_static_allocation.h  tgp_vector.h
examples/: vector_test.cpp
exceptions/: CMakeLists.txt
exceptions/include/: tgp_exceptions.h
exceptions/source/: tgp_exceptions.cpp
include/: tgp_action.h  tgp_application.h  tgp_button.h  tgp_button_manager.h  tgp_drawable.h  tgp_image.h  tgp_image_manager.h  tgp_manager.h  tgp_pixel_area.h  tgp_pixel_area_manager.h  tgp_updatable.h  tgp_vectors.h  tgp_window.h
sfmx/: CMakeLists.txt
sfmx/include/: sfmx_event.h  sfmx_keyboard.h  sfmx_mouse.h  sfmx_render_window.h  sfmx_sprite.h  sfmx_texture.h  sfmx_vectors.h
sfmx/source/: sfmx_keyboard.cpp  sfmx_mouse.cpp  sfmx_render_window.cpp  sfmx_sprite.cpp  sfmx_texture.cpp
source/: tgp_action.cpp  tgp_application.cpp  tgp_button.cpp  tgp_button_manager.cpp  tgp_image.cpp  tgp_image_manager.cpp  tgp_pixel_area.cpp  tgp_pixel_area_manager.cpp  tgp_vectors.tpp  tgp_window.cpp
